<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/tv_app_widget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_app_widget_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_widget_title"
        android:layout_margin="8dp"
        android:text="@string/ingredients_title"
        android:textColor="@color/cardview_dark_background" />

</RelativeLayout>