<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_ingredient_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingEnd="4dp"
    android:paddingStart="4dp"
    android:paddingTop="2dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <TextView
        android:id="@+id/tv_ingredient_list_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxEms="2"
        android:minEms="2"
        android:paddingEnd="4dp"
        android:text="@string/recipe_quantity" />

    <TextView
        android:id="@+id/tv_ingredient_list_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxEms="3"
        android:minEms="3"
        android:text="@string/recipe_measure" />

    <TextView
        android:id="@+id/tv_ingredient_list_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredient" />
</LinearLayout>